--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,5 @@
 {
-  "github": {
-    "silent": true
-  },
   "buildCommand": "flutter build web",
   "outputDirectory": "build/web",
-  "installCommand": "flutter pub get",
-  "framework": null,
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*\\.(js|css|woff2?))",
-      "headers": [
-        {
-          "key": "Cache-Control", 
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ]
+  "installCommand": "flutter pub get"
 }
-EOF < /dev/null
