--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "flutter build web",
+  "buildCommand": "",
   "outputDirectory": "build/web",
-  "installCommand": "flutter pub get"
+  "installCommand": ""
 }
